// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel should display children 1`] = `
<section>
  <header
    className="tribe-editor__events-pro__panel-header tribe-editor__events-pro__panel-header--expanded"
  >
    <button
      className="tribe-editor__events-pro__panel-header-button"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="tribe-editor__events-pro__panel-header-button-text"
      >
        <span
          className="tribe-editor__events-pro__panel-header-button-title"
        >
          Panel title
        </span>
      </span>
      <<svg>icon mock</svg> />
    </button>
  </header>
  <span>
    Test children
  </span>
</section>
`;

exports[`Panel should match snapshot 1`] = `
<section>
  <header
    className="tribe-editor__events-pro__panel-header"
  >
    <button
      className="tribe-editor__events-pro__panel-header-button"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="tribe-editor__events-pro__panel-header-button-text"
      >
        <span
          className="tribe-editor__events-pro__panel-header-button-title"
        >
          Panel title
        </span>
        <span
          className="tribe-editor__events-pro__panel-header-button-count"
        >
          (2)
        </span>
      </span>
      <<svg>icon mock</svg> />
    </button>
  </header>
</section>
`;
